<resources>
    <string name="app_name">libretto</string>
    <string name="nome_utente">Nome Utente</string>
    <string name="password">Password</string>
    <string name="entra">Entra</string>
    <string name="registra">Registrati</string>
    <string name="testo_login">Effettua il Login</string>
    <string name="esempio_nome_utente">a.mameli31</string>
    <string name="esempio_password">*****</string>
    <string name="oppure">Oppure</string>
    <string name="testo_registra">Registrati</string>
    <string name="nome">Nome</string>
    <string name="esempio_nome">Anna Chiara</string>
    <string name="esempio_cognome">Mameli</string>
    <string name="cognome">Cognome</string>
    <string name="conferma">Conferma</string>
    <string name="data_nascita">Data di nascita</string>
    <string name="esempio_data">27/07/2002</string>
    <string name="home">Esami</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="cancella">Cancella</string>
    <string name="media">Medie</string>
    <string name="laurea">Voto Laurea</string>
    <string name="laurea_stimato">Voto Laurea Stimato</string>
    <string name="testo_aggiungi">Aggiungi Esame</string>
    <string name="nome_esame">Nome Esame</string>
    <string name="esempio_esame">IUM</string>
    <string name="voto_esame">Voto Esame</string>
    <string name="esempio_voto">31</string>
    <string name="cfu_esame">CFU Esame</string>
    <string name="esempio_cfu">6</string>
    <string name="inserisci">Inserisci</string>
    <string name="testo_cancella">Cancella Esame</string>
    <string name="invia">Invia</string>
    <string name="seleziona_esame">Seleziona Esame</string>
    <string name="testo_media">Medie Esami</string>
    <string name="media_arit">Media Aritmetica</string>
    <string name="media_pond">Media Ponderata</string>
</resources>