<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/lilla">

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/testo_login"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="470dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/layout_tondo">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_utente"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/nomeutente"
            android:background="@drawable/edittext_tondi"
            android:hint="@string/esempio_nome_utente"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/errore_nomeutente"
            android:textSize="13sp"
            android:background="@drawable/edittext_tondi_errori"
            android:textColor="@color/white"
            android:visibility="invisible"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:background="@drawable/edittext_tondi"
            android:layout_gravity="center"
            android:hint="@string/esempio_password"
            />

        <TextView
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/errore_password"
            android:textSize="13sp"
            android:background="@drawable/edittext_tondi_errori"
            android:textColor="@color/white"
            android:visibility="invisible"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/errore_generale"
            android:textSize="13sp"
            android:background="@drawable/edittext_tondi_errori"
            android:textColor="@color/white"
            android:visibility="invisible"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <Button
            android:id="@+id/procedi"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/viola_scuro"
            android:layout_gravity="center"
            android:text="@string/entra" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oppure"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"
            />

        <Button
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/registra"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:backgroundTint="@color/viola_meno_scuro"
            android:id="@+id/bottone_registrazione"
            />

    </LinearLayout>
</LinearLayout>