<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lilla"
    tools:context=".Cancella">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testo_cancella"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="-60dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="500dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:background="@drawable/layout_tondo">

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp"
                />


            <TextView
                android:id="@+id/testo_sel_esame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seleziona_esame"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                />

            <Spinner
                android:id="@+id/spinner"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/edittext_tondi"
                android:spinnerMode="dropdown"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="220dp"
                />

            <Button
                android:id="@+id/invia"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/viola_scuro"
                android:layout_gravity="center"
                android:text="@string/invia" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:labelVisibilityMode="labeled">
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>